добавила разметку по макету

--- a/index.html
+++ b/index.html
@@ -4,19 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frontend</title>
 </head>
 
 <body>
-    <header>
+    <header class="page__header header">
+        <img src="img/logo.png" alt="" class="header__logo">
+
+        <nav class="header__nav nav">
+            <ul class="nav__list">
+                <li class="list__item">STUDIO</li>
+                <li class="list__item">COMMUNITY</li>
+                <li class="list__item">SOUNDS</li>
+                <li class="list__item">PLUGINS</li>
+                <li class="list__item">BLOG</li>
+            </ul>
+        </nav>
+
+        <a href="" class="header__button button">LOG IN</a>
+        <a href="" class="header__button button">SIGN UP</a>
 
     </header>
 
-    <main>
+    <main class="page__content content">
+        <section class="content__section main-block"></section>
+
+        <section class="content__section featured"></section>
+
+        <section class="content__section info-sounds"></section>
+
+        <section class="content__section info-plugins"></section>
+
+        <section class="content__section info-studio"></section>
+
+        <section class="content__section reviews"></section>
+
+        <section class="content__section advantages"></section>
+
+        <section class="content__section jobs"></section>
 
     </main>
 
-    <footer>
+    <footer class="page__footer footer">
 
     </footer>
 </body>
