добавлена половина разметки

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="page__header header">
-        <img src="img/logo.png" alt="" class="header__logo">
+        <img src="img/header/logo.svg" alt="" class="header__logo">
 
         <nav class="header__nav nav">
             <ul class="nav__list">
@@ -27,13 +27,56 @@
     </header>
 
     <main class="page__content content">
-        <section class="content__section main-block"></section>
+        <section class="content__section main-block">
 
-        <section class="content__section featured"></section>
+            <div class="main-block__container container">
+                <img src="img/main-block/slogan.png" alt="" class="container__slogan">
+                <p class="container__text">Royalty-free sounds. Industry-leading software.<br>Endless inspiration. Start
+                    creating
+                    with Splice.</p>
+                <button class="container__button">SIGN UP</button>
+            </div>
 
-        <section class="content__section info-sounds"></section>
+            <img src="img/main-block/side.png" alt="" class="main-block__image">
 
-        <section class="content__section info-plugins"></section>
+        </section>
+
+        <section class="content__section featured">
+
+            <p class="section__caption">FEATURED IN</h2>
+            <div class="featured__list">
+                <!--сюда картинки-->
+            </div>
+        </section>
+
+        <section class="content__section info-sounds">
+
+            <div class="info-sounds__container container">
+                <p class="section__caption">SOUNDS</h2>
+                <h2 class="container__slogan">Find your sound</h2>
+                <p class="container__text">Preview and download millions of royalty-free samples from top producers,
+                    artists, and sound designers. Available on desktop, web, and mobile.</p>
+                <button class="container__button">TRY SOUNDS</button>
+
+                <img src="" alt="" class="info-sounds__image">
+            </div>
+
+        </section>
+
+        <section class="content__section info-plugins">
+
+            <img src="" alt="" class="info-plugins__image">
+
+            <div class="info-plugins__container container">
+                <p class="section__caption">PLUGINS</h2>
+                <h2 class="container__slogan">Build your digital studio</h2>
+                <p class="container__text">Try industry-leading music software for free? pay it off over time and own it
+                    forever.</p>
+                <button class="container__button">TRY GEAR</button>
+
+            </div>
+
+        </section>
 
         <section class="content__section info-studio"></section>
 
