--- a/index.html
+++ b/index.html
@@ -78,13 +78,56 @@
 
         </section>
 
-        <section class="content__section info-studio"></section>
+        <section class="content__section info-studio">
 
-        <section class="content__section reviews"></section>
+            <div class="info-studio__container container">
+                <p class="section__caption">SOUNDS</h2>
+                <h2 class="container__slogan">Find your sound</h2>
+                <p class="container__text">Preview and download millions of royalty-free samples from top producers,
+                    artists, and sound designers. Available on desktop, web, and mobile.</p>
+                <button class="container__button">TRY SOUNDS</button>
 
-        <section class="content__section advantages"></section>
+                <img src="" alt="" class="info-studio__image">
+            </div>
 
-        <section class="content__section jobs"></section>
+        </section>
+
+        <section class="content__section reviews">
+
+            <div class="reviews__container container">
+                <p class="section__caption">SOUNDS</h2>
+                <h2 class="container__slogan">Find your sound</h2>
+                <p class="container__text">Preview and download millions of royalty-free samples from top producers,
+                    artists, and sound designers. Available on desktop, web, and mobile.</p>
+                <button class="container__button">TRY SOUNDS</button>
+
+                <img src="" alt="" class="reviews__image">
+            </div>
+
+            <div class="reviews__one one">
+                <p class="review__text"></p>
+                <img src="" alt="" class="review__image">
+                <p class="review__name"></p>
+                <p class="review__artist"></p>
+            </div>
+
+        </section>
+
+        <section class="content__section advantages">
+            <h2 class="advantages__slogan">As good as it sounds</h2>
+            <div class="advantages__all">
+                <div class="advantages__one">
+                    <img src="" alt="" class="advantages__image">
+                    <p class="advantage__name"></p>
+                    <p class="advantsge__text"></p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content__section jobs">
+            <h2 class="jobs__slogan">Come change the way people make music</h2>
+            <button class="jobs__button">JOBS AT SPLICE</button>
+        </section>
 
     </main>
 
