--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <section class="content__section featured">
 
-            <p class="section__caption">FEATURED IN</h2>
+            <p class="section__caption">FEATURED IN</p>
             <div class="featured__list">
                 <!--сюда картинки-->
             </div>
@@ -52,7 +52,7 @@
         <section class="content__section info-sounds">
 
             <div class="info-sounds__container container">
-                <p class="section__caption">SOUNDS</h2>
+                <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
@@ -68,12 +68,11 @@
             <img src="" alt="" class="info-plugins__image">
 
             <div class="info-plugins__container container">
-                <p class="section__caption">PLUGINS</h2>
+                <p class="section__caption">PLUGINS</p>
                 <h2 class="container__slogan">Build your digital studio</h2>
                 <p class="container__text">Try industry-leading music software for free? pay it off over time and own it
                     forever.</p>
-                <button class="container__button">TRY GEAR</button>
-
+                <button class="container__button">TRY GEAR</p>button>
             </div>
 
         </section>
@@ -81,7 +80,7 @@
         <section class="content__section info-studio">
 
             <div class="info-studio__container container">
-                <p class="section__caption">SOUNDS</h2>
+                <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
@@ -95,7 +94,7 @@
         <section class="content__section reviews">
 
             <div class="reviews__container container">
-                <p class="section__caption">SOUNDS</h2>
+                <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
@@ -132,7 +131,74 @@
     </main>
 
     <footer class="page__footer footer">
+        <div class="footer__copyright">
+            <img src="img/header/logo.svg" alt="" class="copyright__logo">
+            <p class="copyright__text">2021 Splice.com All Rights Reserved</p>
+        </div>
+        <div class="footer__links">
+            <ul class="links__column">
+                <li class="column__link_h"><h2>STUDIO</h2></li>
+                <li class="column__link">Features</li>
+                <li class="column__link">About Splice Studio</li>
+                <li class="column__link">Managing Your Production Library</li>
+                <li class="column__link">Collaborating with Baewatch</li>
+            </ul>
+            <ul class="links__column">
+                <li class="column__link_h"><h2>COMMUNITY</h2></li>
+                <li class="column__link">Ableton Live Projects</li>
+                <li class="column__link">FL Studio Projects</li>
+                <li class="column__link">Logic Pro X Projects</li>
+                <li class="column__link">Garageband Projects</li>
+                <li class="column__link">Remix Contests</li>
+                <li class="column__link">Tiestos Secrets</li>
+            </ul>
+            <ul class="links__column">
+                <li class="column__link_h"><h2>SOUNDS</h2></li>
+                <li class="column__link">Features</li>
+                <li class="column__link">Catalog</li>
+                <li class="column__link">How Jauz Uses Sounds</li>
+                <li class="column__link">deadmau5s Chimaera</li>
+                <li class="column__link">KSHMR Vol. 2</li>
+            </ul>
+            <ul class="links__column">
+                <li class="column__link_h"><h2>PLUGINS</h2></li>
+                <li class="column__link">Top VSTs</li>
+                <li class="column__link">Serum</li>
+                <li class="column__link">Rent to Own</li>
+                <li class="column__link">Free Plugins</li>
+                <li class="column__link">Top Manufacturers</li>
+            </ul>
+            <ul class="links__column">
+                <li class="column__link_h"><h2>BEATMAKER</h2></li>
+                <li class="column__link">Create Your Own Beat</li>
+                <li class="column__link">Wakapella</li>
+                <li class="column__link">Just Blaze</li>
+            </ul>
+            <ul class="links__column">
+                <li class="column__link_h"><h2>BLOG</h2></li>
+                <li class="column__link">Latest Posts</li>
+                <li class="column__link">Using Soundtoys Decapitator</li>
+                <li class="column__link">Mastering 101</li>
+                <li class="column__link">Producing Future Beats</li>
+                <li class="column__link">Belonging at Splice</li>
+            </ul>
+        </div>
+        <div class="footer__social">
+            <h2 class="social__slogan">FIND US ON SOCIAL</h2>
+            
+            <img src="img/facebook.svg" alt="" class="social__item">
+            <img src="img/twitter.svg" alt="" class="social__item">
+            <img src="img/instagram.svg" alt="" class="social__item">
+            <img src="img/YouTube.svg" alt="" class="social__item">
 
+            <ul class="social__links">
+                <li class="social__link">Terms Of Use</li>
+                <li class="social__link">Privacy Policy</li>
+                <li class="social__link">Jobs</li>
+                <li class="social__link">Contact</li>
+                <li class="social__link">Help</li>
+            </ul>
+        </div>
     </footer>
 </body>
 
