--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="page__content content">
         <section class="content__section main-block">
 
-            <div class="main-block__container container">
+            <div class="container">
                 <img src="img/main-block/slogan.png" alt="" class="container__slogan">
                 <p class="container__text">Royalty-free sounds. Industry-leading software.<br>Endless inspiration. Start
                     creating
@@ -45,20 +45,24 @@
 
             <p class="section__caption">FEATURED IN</p>
             <div class="featured__list">
-                <!--сюда картинки-->
+                <img src="img/featured1.svg" alt="">
+                <img src="img/featured2.svg" alt="">
+                <img src="img/featured3.svg" alt="">
+                <img src="img/featured4.svg" alt="">
+                <img src="img/featured5.svg" alt="">
             </div>
         </section>
 
         <section class="content__section info-sounds">
 
-            <div class="info-sounds__container container">
+            <div class="container">
                 <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
                 <button class="container__button">TRY SOUNDS</button>
 
-                <img src="" alt="" class="info-sounds__image">
+                <img src="img/sounds_img.png" alt="" class="info-sounds__image">
             </div>
 
         </section>
@@ -67,7 +71,7 @@
 
             <img src="" alt="" class="info-plugins__image">
 
-            <div class="info-plugins__container container">
+            <div class="container">
                 <p class="section__caption">PLUGINS</p>
                 <h2 class="container__slogan">Build your digital studio</h2>
                 <p class="container__text">Try industry-leading music software for free? pay it off over time and own it
@@ -79,33 +83,33 @@
 
         <section class="content__section info-studio">
 
-            <div class="info-studio__container container">
+            <div class="container">
                 <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
                 <button class="container__button">TRY SOUNDS</button>
 
-                <img src="" alt="" class="info-studio__image">
+                <img src="img/studio_img.png" alt="" class="info-studio__image">
             </div>
 
         </section>
 
         <section class="content__section reviews">
 
-            <div class="reviews__container container">
+            <div class="container">
                 <p class="section__caption">SOUNDS</p>
                 <h2 class="container__slogan">Find your sound</h2>
                 <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
                 <button class="container__button">TRY SOUNDS</button>
 
-                <img src="" alt="" class="reviews__image">
+                <img src="img/reviews_img.png" alt="" class="reviews__image">
             </div>
 
             <div class="reviews__one one">
                 <p class="review__text"></p>
-                <img src="" alt="" class="review__image">
+                <img src="img/review1.png" alt="" class="review__image">
                 <p class="review__name"></p>
                 <p class="review__artist"></p>
             </div>
@@ -116,7 +120,7 @@
             <h2 class="advantages__slogan">As good as it sounds</h2>
             <div class="advantages__all">
                 <div class="advantages__one">
-                    <img src="" alt="" class="advantages__image">
+                    <img src="img/" alt="" class="advantages__image">
                     <p class="advantage__name"></p>
                     <p class="advantsge__text"></p>
                 </div>
