--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <li class="header-list__item">BLOG</li>
             </ul>
         </nav>
-
-        <a href="" class="header__button">LOG IN</a>
-        <a href="" class="header__button">SIGN UP</a>
-
+        <div class="header__buttons">
+            <a href="" class="header__button-log">LOG IN</a>
+            <a href="" class="header__button-sign">SIGN UP</a>
+        </div>
     </header>
 
     <main class="main">
@@ -37,9 +37,9 @@
                     with Splice.</p>
                 <button class="container__button">SIGN UP</button>
             </div>
-
-            <img src="img/main-block/side.png" alt="" class="main-block__img">
-
+            <div class="image-container">
+                <img src="img/main-block/side.png" alt="" class="main-block__img">
+            </div>
         </section>
 
         <section class="section-featured">
@@ -75,7 +75,7 @@
                 <h2 class="container__slogan">Build your digital studio</h2>
                 <p class="container__text">Try industry-leading music software for free? pay it off over time and own it
                     forever.</p>
-                <button class="container__button">TRY GEAR</p>button>
+                <button class="container__button">TRY GEAR</p><button>
             </div>
 
         </section>
