--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://db.onlinewebfonts.com/c/241fe709c5ae3e259dd0309ac49fa076?family=Shne+Breit+Krftig" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
     <header class="header">
-        <img src="img/header/logo.svg" alt="" class="header__logo">
+        <div class="left">
+            <img src="img/header/logo.svg" alt="" class="header__logo">
 
-        <nav class="header__nav">
-            <ul class="header-list">
-                <li class="header-list__item">STUDIO</li>
-                <li class="header-list__item">COMMUNITY</li>
-                <li class="header-list__item">SOUNDS</li>
-                <li class="header-list__item">PLUGINS</li>
-                <li class="header-list__item">BLOG</li>
-            </ul>
-        </nav>
+            <nav class="header__nav">
+                <ul class="header-list">
+                    <li class="header-list__item">STUDIO</li>
+                    <li class="header-list__item">COMMUNITY</li>
+                    <li class="header-list__item">SOUNDS</li>
+                    <li class="header-list__item">PLUGINS</li>
+                    <li class="header-list__item">BLOG</li>
+                </ul>
+            </nav>
+        </div>
         <div class="header__buttons">
             <a href="" class="header__button-log">LOG IN</a>
             <a href="" class="header__button-sign">SIGN UP</a>
@@ -56,12 +59,12 @@
 
         <section class="section-sounds">
 
-            <div class="container">
-                <p class="container__caption">SOUNDS</p>
-                <h2 class="container__slogan">Find your sound</h2>
-                <p class="container__text">Preview and download millions of royalty-free samples from top producers,
+            <div class="container1">
+                <p class="container1__caption">SOUNDS</p>
+                <h2 class="container1__slogan">Find your sound</h2>
+                <p class="container1__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
-                <button class="container__button">TRY SOUNDS</button>
+                <button class="container1__button">TRY SOUNDS</button>
             </div>
             <img src="img/sounds_img.png" alt="" class="section-sounds__img">
         </section>
